# controllers/Event.js
@@ -25,3 +25,24 @@ module.exports.getEventById = function getEventById(req, res, next) {
     });
 };
 
+module.exports.getEventByName = function getEventByName(req, res, next) {
+  var eventName = req.swagger.params['eventName'].value;
+  Event.getEventByName(eventName)
+    .then(function (response) {
+      utils.writeJson(res, response);
+    })
+    .catch(function (response) {
+      utils.writeJson(res, response);
+    });
+};
+
+module.exports.getEventByMonth = function getEventByMonth(req, res, next) {
+  var eventMonth = req.swagger.params['eventMonth'].value;
+  Event.getEventByName(eventMonth)
+    .then(function (response) {
+      utils.writeJson(res, response);
+    })
+    .catch(function (response) {
+      utils.writeJson(res, response);
+    });
+};
